fixed code alignment in portfolio page along with initial work on fixing contact me section links sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,6 +191,11 @@ main {
     margin-top: 20px;
 }
 
+.clickable {
+    width: 60px;
+    height: 60px;
+}
+
 .external-links {
     width: 60px;
     height: 60px;
